--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tea House</title>
-</head>
-<body>
+    <title>Tea-House</title>
+    <!-- daisy ui and tailwind css links -->
     
+<link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.tailwindcss.com"></script>
+<!-- font links -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<!-- font aswme -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- tailwind customizetion -->
+<script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
+        }
+      }
+    }
+  </script>
+<style>
+    .font-manrope{
+        font-family: 'Manrope', sans-serif;
+
+    }
+</style>
+</head>
+<body class="font-manrope">
+    <header class="container mx-auto">
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+             <div>
+                <img src="./images/banner.png" class="max-w-sm"/>
+            <div class="flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 -mt-16">
+                <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+                <div>
+                    <h3 class="md:text-3xl">5.00</h3>
+                    <p>Trust pilot Ratings</p>
+                </div>
+
+            </div>
+             </div>
+              <div>
+                <h1 class="text-7xl font-extrabold">it's good <br> tea time at The <br> Tea House!</h1>
+                <p class="py-6">Provident cupiditate Quaerat fugiat ut assumenda <br> excepturi exercitationem quasi.</p>
+                <button class="btn btn-secondary">Explore more</button>
+              </div>
+            </div>
+          </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
