created the cards section

--- a/index.html
+++ b/index.html
@@ -51,12 +51,65 @@
               <div>
                 <h1 class="text-7xl font-extrabold">it's good <br> tea time at The <br> Tea House!</h1>
                 <p class="py-6">Provident cupiditate Quaerat fugiat ut assumenda <br> excepturi exercitationem quasi.</p>
-                <button class="btn btn-secondary">Explore more</button>
+                <button class="btn bg-gradient-to-r from-orange-500  to-red-500 text-white">Explore more</button>
               </div>
             </div>
           </div>
     </header>
-    <main>
+    <main class="container mx-auto">
+        <!-- featured section -->
+        <section class="text-center my-24">
+            <h2 class="text-5xl font-extrabold mb-5 ">Our featured products</h2>
+            <p class="lg:max-w-3xl mx-auto mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae suscipit eveniet molestiae eum consequuntur earum voluptatem repudiandae similique nostrum nam?
+            </p>
+            <!--section2 card container -->
+            <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4">
+                <!-- first card -->
+                <div class="card  p-8 bg-slate-100 shadow-xl">
+                    <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-bold">Milk Tea!</h2>
+                      <p>If a dog chews does he choose?</p>
+        
+                    </div>
+                  </div>
+
+
+
+  <!-- first card -->
+  <div class="card  p-8 bg-slate-100 shadow-xl">
+    <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
+    <div class="card-body justify-center">
+      <h2 class="text-2xl font-bold">Pink Tea!</h2>
+      <p>If a dog chews does he choose?</p>
+
+    </div>
+  </div>
+  <!-- first card -->
+  <div class="card p-8 bg-slate-100 shadow-xl">
+    <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
+    <div class="card-body justify-center">
+      <h2 class="text-2xl font-bold">chocolaty Tea!</h2>
+      <p>If a dog chews does he choose?</p>
+
+    </div>
+  </div>
+
+
+  <!-- first card -->
+  <div class="card p-8 bg-slate-100 shadow-xl">
+    <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
+    <div class="card-body justify-center">
+      <h2 class="text-2xl font-bold"> Red Tea!</h2>
+      <p>If a dog chews does he choose?</p>
+
+    </div>
+  </div>
+            </div>
+            
+
+        </section>
+
 
     </main>
     <footer>
