--- a/index.html
+++ b/index.html
@@ -109,7 +109,29 @@
             
 
         </section>
+<!-- great tea fresh tea section -->
+<section class="my-24 flex flex-col lg:flex-row gap-12">
+<div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
 
+    <div class="rounded-xl h-36  bg-gradient-to-r from-red-100 to-yellow-100"></div>
+<div class="row-span-2 bg-yellow-100 rounded-lg px-7 py-12 flex justify-center items-center"><img src="./images/fresh-1.png" alt=""></div>
+<div class="row-span-2 rounded-lg bg-slate-100 px-7 py-12 flex justify-center items-center"><img src="./images/fresh-2.png" alt=""></div>
+<div class="rounded-xl h-36 bg-gradient-to-r from-gray-300 to-gray-100 "> </div>
+</div>
+<div class="space-y-5 flex-1">
+        <h3 class="text-5xl font-extrabold">
+        Great Tea, Freshly <br>Presented
+    </h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet possimus numquam velit dicta dolor quod repellat minus. Vitae beatae, numquam ut aliquam debitis quae dolore dolores ad cum corporis minima? Debitis vel corporis deserunt et commodi mollitia fugiat vitae culpa!</p>
+    <h4 class="text-xl font-extrabold">Unic Taste</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, pariatur.</p>
+    <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, pariatur.</p>
+
+
+
+</div>
+</section>
 
     </main>
     <footer>
