--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="rounded-xl h-36  bg-gradient-to-r from-red-100 to-yellow-100"></div>
 <div class="row-span-2 bg-yellow-100 rounded-lg px-7 py-12 flex justify-center items-center"><img src="./images/fresh-1.png" alt=""></div>
 <div class="row-span-2 rounded-lg bg-slate-100 px-7 py-12 flex justify-center items-center"><img src="./images/fresh-2.png" alt=""></div>
-<div class="rounded-xl h-36 bg-gradient-to-r from-gray-300 to-gray-100 "> </div>
+<div class="rounded-xl h-36 bg-gradient-to-r from-gray-300 to-white "> </div>
 </div>
 <div class="space-y-5 flex-1">
         <h3 class="text-5xl font-extrabold">
@@ -133,6 +133,26 @@
 </div>
 </section>
 
+<!-- super client section -->
+<section class="my-24 flex flex-col md:flex-row gap-12 rounded-xl px-16 py-24 bg-gradient-to-r from-orange-500 to-red-500">
+<div class="space-y-5">
+  <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
+  <p class="bold text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab porro repudiandae voluptatum rerum, consectetur ea odio sunt vitae quo nisi ullam ipsa laboriosam illum hic cum minus pariatur similique nihil recusandae natus facilis ad non officia quisquam! Accusantium, culpa perferendis?</p>
+  <button class="btn font-extrabold text-red-500 border-red-600">Show All</button>
+</div>
+<div>
+  <!-- review -->
+
+<div class="p-10 rounded-l-lg bg-white relative">
+  <img class="absolute -left-5 -top-5 " src="./images/client.png" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis aperiam nesciunt sed accusantium voluptatibus reiciendis facilis nemo ullam quidem fugiat.</p>
+  <h4 class="font-extrabold mt-5">Ilham Yuda</h4>
+  <p class="font-medium">Businessman</p>
+</div>
+
+</div>
+
+</section>
     </main>
     <footer>
 
