--- a/index.html
+++ b/index.html
@@ -135,19 +135,50 @@
 
 <!-- super client section -->
 <section class="my-24 flex flex-col md:flex-row gap-12 rounded-xl px-16 py-24 bg-gradient-to-r from-orange-500 to-red-500">
-<div class="space-y-5">
+<div class=" flex justify-center items-center pr-28 ">
+ <div class="space-y-5">
   <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
   <p class="bold text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab porro repudiandae voluptatum rerum, consectetur ea odio sunt vitae quo nisi ullam ipsa laboriosam illum hic cum minus pariatur similique nihil recusandae natus facilis ad non officia quisquam! Accusantium, culpa perferendis?</p>
   <button class="btn font-extrabold text-red-500 border-red-600">Show All</button>
+ </div>
 </div>
-<div>
-  <!-- review -->
+<!-- review container -->
+<div class="relative">
+  <!--next review -->
 
-<div class="p-10 rounded-l-lg bg-white relative">
-  <img class="absolute -left-5 -top-5 " src="./images/client.png" alt="">
+<div class="p-10 opacity-40 rounded-lg mb-16 bg-white relative z-10">
+  <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white " src="./images/client.png" alt="">
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis aperiam nesciunt sed accusantium voluptatibus reiciendis facilis nemo ullam quidem fugiat.</p>
   <h4 class="font-extrabold mt-5">Ilham Yuda</h4>
   <p class="font-medium">Businessman</p>
+<div class="flex justify-end">
+  <img class="" src="./images/circles.png" alt="">
+
+</div>
+</div>
+  <!--current review -->
+
+<div class="p-10 rounded-lg bg-white absolute top-40 -left-24 lg:w-[430px] z-20">
+  <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white " src="./images/client.png" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis aperiam nesciunt sed accusantium voluptatibus reiciendis facilis nemo ullam quidem fugiat.</p>
+  <h4 class="font-extrabold mt-5">Ilham Yuda</h4>
+  <p class="font-medium">Businessman</p>
+<div class="flex justify-end">
+  <img class="" src="./images/circles.png" alt="">
+
+</div>
+</div>
+  <!--previous review -->
+
+<div class="p-10 opacity-40 rounded-lg bg-white relative z-10">
+  <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white " src="./images/client.png" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis aperiam nesciunt sed accusantium voluptatibus reiciendis facilis nemo ullam quidem fugiat.</p>
+  <h4 class="font-extrabold mt-5">Ilham Yuda</h4>
+  <p class="font-medium">Businessman</p>
+<div class="flex justify-end">
+  <img class="" src="./images/circles.png" alt="">
+
+</div>
 </div>
 
 </div>
