created footer section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 </head>
 <body class="font-manrope">
     <header class="container mx-auto">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row-reverse">
+        <div class="my-20">
+            <div class="flex justify-between items-center flex-col lg:flex-row-reverse">
              <div>
-                <img src="./images/banner.png" class="max-w-sm"/>
+                <img src="./images/banner.png" class=""/>
             <div class="flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 -mt-16">
                 <i class="fa-solid fa-star text-3xl text-amber-400"></i>
                 <div>
@@ -135,7 +135,7 @@
 
 <!-- super client section -->
 <section class="my-24 flex flex-col md:flex-row gap-12 rounded-xl px-16 py-24 bg-gradient-to-r from-orange-500 to-red-500">
-<div class=" flex justify-center items-center pr-28 ">
+<div class=" flex justify-center items-center lg:pr-28 ">
  <div class="space-y-5">
   <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
   <p class="bold text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab porro repudiandae voluptatum rerum, consectetur ea odio sunt vitae quo nisi ullam ipsa laboriosam illum hic cum minus pariatur similique nihil recusandae natus facilis ad non officia quisquam! Accusantium, culpa perferendis?</p>
@@ -158,7 +158,7 @@
 </div>
   <!--current review -->
 
-<div class="p-10 rounded-lg bg-white absolute top-40 -left-24 lg:w-[430px] z-20">
+<div class="p-10 rounded-lg bg-white absolute top-40 lg:-left-24 lg:w-[430px] z-20">
   <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white " src="./images/client.png" alt="">
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis aperiam nesciunt sed accusantium voluptatibus reiciendis facilis nemo ullam quidem fugiat.</p>
   <h4 class="font-extrabold mt-5">Ilham Yuda</h4>
@@ -184,9 +184,55 @@
 </div>
 
 </section>
-    </main>
-    <footer>
+</main>
+<footer class=" px-4 lg:px-48 py-10 bg-yellow-100 text-base-content">
+  <div class="flex justify-between my-24">
+    <img src="./images/cup.png" alt="">
+    <p>
+      <span>Ready to get Started?</span>
+      <button class="btn bg-gradient-to-r from-orange-500  to-red-500 text-white ">Get started</button>
+    </p>
+  </div>
+<div class="footer ">
 
-    </footer>
+  <div>
+    <span class="footer-title">Services</span> 
+    <a class="link link-hover">Branding</a> 
+    <a class="link link-hover">Design</a> 
+    <a class="link link-hover">Marketing</a> 
+    <a class="link link-hover">Advertisement</a>
+  </div> 
+  <div>
+    <span class="footer-title">Company</span> 
+    <a class="link link-hover">About us</a> 
+    <a class="link link-hover">Contact</a> 
+    <a class="link link-hover">Jobs</a> 
+    <a class="link link-hover">Press kit</a>
+  </div> 
+  <div>
+    <span class="footer-title">Legal</span> 
+    <a class="link link-hover">Terms of use</a> 
+    <a class="link link-hover">Privacy policy</a> 
+    <a class="link link-hover">Cookie policy</a>
+  </div> 
+  <div>
+    <span class="footer-title">Newsletter</span> 
+    <div class="form-control w-80">
+      <label class="label">
+        <span class="label-text">Enter your email address</span>
+      </label> 
+      <div class="relative">
+        <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-black outline-none" /> 
+        <button class="btn  absolute top-0 right-0 rounded-l-none">Subscribe</button>
+      </div>
+    </div>
+  </div>
+
+</div>
+  <div class="mt-10 text-center">
+    <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+  </div>
+</footer>
+
 </body>
 </html>
